--- a/project-login-module/WebContent/home.html
+++ b/project-login-module/WebContent/home.html
@@ -42,7 +42,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a> 
   <a href="#"><i class="fa fa-fw fa-search"></i> Search</a> 
   <a href="#"><i class="fa fa-fw fa-shopping-cart"></i>Your Bag</a> 
-  <a href="#"><i class="fa fa-credit-card"></i> Payment</a>>
+  <a href="#"><i class="fa fa-credit-card"></i> Payment</a>
   <a href="#"><i class="fa fa-fw fa-user"></i> Logout</a>
   </div><header>
  <br><br> <br> <br> <br> <br> <br>
@@ -54,7 +54,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
     <a href="#" ><i class="fas fa-phone-square-alt"></i>Contact</a> 
   <a href="#"> Privacy Notice</a> 
   <a href="#"><i class="far fa-file-alt"></i>Terms and Conditions</a> 
-  <a href="#"> Help</a>>
+  <a href="#"> Help</a>
   </div>
   </footer>
 </body>
